feat: adding i18n and Group-Admins

--- a/cake-planner-frontend/angular.json
+++ b/cake-planner-frontend/angular.json
@@ -26,7 +26,8 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "projects/admin-panel/public"
+                "input": "projects/admin-panel/src/assets",
+                "output": "/assets"
               }
             ],
             "styles": ["projects/admin-panel/src/styles.scss"]
