--- a/cake-planner-frontend/package.json
+++ b/cake-planner-frontend/package.json
@@ -32,6 +32,7 @@
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
     "@angular/service-worker": "^21.0.0",
+    "@jsverse/transloco": "^8.2.0",
     "angularx-qrcode": "^21.0.4",
     "date-fns": "^4.1.0",
     "rxjs": "~7.8.0",
