--- a/cake-planner-frontend/package.json
+++ b/cake-planner-frontend/package.json
@@ -1,6 +1,12 @@
 {
   "name": "cake-planner-frontend",
-  "version": "0.4.0",
+  "version": "0.5.0",
+  "description": "Cake Planner Frontends",
+  "author": "Zheng Robert",
+  "license": "MIT",
+  "homepage": "https://github.com/zb_bamboo/cake-planner-frontend",
+  "Admin frontend": "ng serve admin-panel --port 4201",
+  "User frontend": "ng serve user-app",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
