--- a/cake-planner-frontend/package.json
+++ b/cake-planner-frontend/package.json
@@ -1,10 +1,14 @@
 {
   "name": "cake-planner-frontend",
   "version": "0.5.0",
+  "userAppVersion": "0.7.0",
+  "adminPanelVersion": "0.6.0",
+  "created": "2026",
+  "AngularVersion":"21.0.6",
   "description": "Cake Planner Frontends",
   "author": "Zheng Robert",
   "license": "MIT",
-  "homepage": "https://github.com/zb_bamboo/cake-planner-frontend",
+  "homepage": "https://github.com/Zheng-Bote/cake-planner-frontends",
   "Admin frontend": "ng serve admin-panel --port 4201",
   "User frontend": "ng serve user-app",
   "scripts": {
