--- a/.github/workflows/gh_docs_bot.yml
+++ b/.github/workflows/gh_docs_bot.yml
@@ -16,35 +16,12 @@ permissions:
 
 jobs:
   build-and-generate:
-    runs-on: ubuntu-24.04
-
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
       - name: Build and Generate Site
-        uses: ./
+        uses: Zheng-Bote/gha_ghpages@main
         with:
-          template: "theme/desktop/template.html"
-          assets: "theme/blue/assets"
-          output: "public"
-          docs: "docs"
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: static-site
-          path: public/
-
-      - name: Deploy to gh-pages
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          branch: gh-pages
-          folder: public
-
-      - name: Deploy to main (public folder)
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          branch: main
-          folder: public
-          target-folder: public
+          template: 'theme/desktop/template.html'
+          assets: 'theme/blue/assets'
+          output: 'public'
+          docs: 'docs'
