Update checkout action in gh_docs_bot workflow

--- a/.github/workflows/gh_docs_bot.yml
+++ b/.github/workflows/gh_docs_bot.yml
@@ -18,6 +18,10 @@ jobs:
   build-and-generate:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: "main"
       - name: Build and Generate Site
         uses: Zheng-Bote/gha_ghpages@main
         with:
