--- a/.github/workflows/gh_docs_bot.yml
+++ b/.github/workflows/gh_docs_bot.yml
@@ -28,4 +28,4 @@ jobs:
           template: 'theme/desktop/template.html'
           assets: 'theme/blue/assets'
           output: 'public'
-          docs: '/docs'
+          docs: 'docs'
