Update gha_ghpages action version to v1.8.0

--- a/.github/workflows/gh_docs_bot.yml
+++ b/.github/workflows/gh_docs_bot.yml
@@ -23,7 +23,7 @@ jobs:
           fetch-depth: 0
           ref: "main"
       - name: Build and Generate Site
-        uses: Zheng-Bote/gha_ghpages@main
+        uses: Zheng-Bote/gha_ghpages@v1.8.0
         with:
           template: 'theme/desktop/template.html'
           assets: 'theme/blue/assets'
