--- a/.github/workflows/gh_docs_bot.yml
+++ b/.github/workflows/gh_docs_bot.yml
@@ -1,4 +1,4 @@
-name: Manual gh_docs_bot Build
+name: Manual deploy Documentation
 
 # Author: Robert Zheng
 # created: 2026-01-12
@@ -6,7 +6,7 @@ name: Manual gh_docs_bot Build
 # version: 1.0.0
 # description: build and generate static website from markdown files to branch gh-pages
 
-run-name: Manual gh_docs_bot Build by ${{ github.actor }}
+run-name: Manual deploy Documentation by ${{ github.actor }}
 
 on:
   workflow_dispatch:
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: "main"
+          ref: 'main'
       - name: Build and Generate Site
         uses: Zheng-Bote/gha_ghpages@v1.8.0
         with:
