feat: adding TOC 2 doc

--- a/theme/blue/blue.cfg
+++ b/theme/blue/blue.cfg
@@ -1,3 +1,5 @@
 template=theme/desktop/template.html
 assets=theme/blue/assets
 output=dist
+# base_path=https://zheng-bote.github.io/cake-planner-frontends/
+toc=true
