--- a/.github/workflows/repo-create_doctoc_md.yml
+++ b/.github/workflows/repo-create_doctoc_md.yml
@@ -13,13 +13,13 @@ on:
   workflow_call:
   push:
     branches:
-      - "main"
+      - 'main'
     paths:
-      - "README.md"
+      - 'README.md'
       #    - "dist/**"
-      - "docs/**"
-  #    - ".github/actions/**"
-  #    - ".github/workflows/**"
+      #    - "docs/**"
+      #    - ".github/actions/**"
+      #    - ".github/workflows/**"
 
 permissions:
   checks: write
@@ -33,7 +33,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: "main"
+          ref: 'main'
 
       - uses: ./.github/actions/doctoc
         with:
@@ -59,9 +59,9 @@ jobs:
         uses: github-actions-x/commit@v2.9
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          push-branch: "main"
-          commit-message: "appended by Github Actions"
-          force-add: "true"
+          push-branch: 'main'
+          commit-message: 'appended by Github Actions'
+          force-add: 'true'
           #files: README.md
-          name: "github-actions[bot]"
-          email: "github-actions[bot]@users.noreply.github.com"
+          name: 'github-actions[bot]'
+          email: 'github-actions[bot]@users.noreply.github.com'
