Add table of contents option to gh_docs_bot workflow

--- a/.github/workflows/gh_docs_bot.yml
+++ b/.github/workflows/gh_docs_bot.yml
@@ -29,6 +29,7 @@ jobs:
           assets: 'theme/blue/assets'
           output: 'public'
           docs: 'docs'
+          toc: 'true'
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
