fix: docu styles

--- a/projects/user-app/ngsw-config.json
+++ b/projects/user-app/ngsw-config.json
@@ -10,11 +10,19 @@
       }
     },
     {
+      "name": "app-ui-assets",
+      "installMode": "prefetch",
+      "updateMode": "prefetch",
+      "resources": {
+        "files": ["/**/*.css", "/**/*.woff2", "/**/*.woff", "/**/*.ttf", "/**/*.svg", "/**/*.json"]
+      }
+    },
+    {
       "name": "assets",
       "installMode": "lazy",
       "updateMode": "prefetch",
       "resources": {
-        "files": ["/**/*.(svg|cur|jpg|jpeg|png|apng|webp|avif|gif|otf|ttf|woff|woff2)"]
+        "files": ["/**/*.(jpg|jpeg|png|webp|avif|gif)"]
       }
     }
   ],
